# travel_bot

./: bot.py  pyproject.toml
tourism/database/: database.py
tourism/handlers/: other_handlers.py  user_handlers.py
tourism/keyboards/: keyboard.py  main_menu.py
tourism/scripts/: setup_db.py
tourism/services/: parsing_aviasales.py
