[tool.poetry]
name = "tourism"
version = "0.1.0"
description = ""
authors = ["KRISTINA <kristinachekmareva@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.2.0"
psycopg2 = "^2.9.9"
aiogram-calendar = "^0.5.0"
python-dotenv = "1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
